# magnum-imgui

./: CMakeLists.txt  README.org  imgui.cmake
src/: CMakeLists.txt  Example.cpp  Example.h  MagnumImGui.cpp  gl.h
